# cs200-assignment-4

./: .clang-format  CMakeLists.txt
docs/: cs200_rubric_h4.txt
src/: Affine.cpp  Camera.cpp  Camera.h  CameraTest.cpp  SolidRender.cpp  cs200opengl_demo.cpp
